# de-challenge

./: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  sql_challenge.sql
coin-spewer/: Cargo.toml
coin-spewer/src/: data.rs  main.rs
db/: Dockerfile
