[package]
name = "coin-spewer"
version = "0.1.0"
authors = ["Julian Aichholz <julianaichholz@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.17", default-features = false }
itertools = "0.10.1"
rand = { version = "0.8.4", features = ["std"] }
reqwest = { version = "0.11.4", features = ["blocking"] }
serde_json = "1.0.66"
structopt = "0.3.23"
tokio = { version = "1.13.1", features = ["rt", "macros"] }
